--- a/style.css
+++ b/style.css
@@ -91,11 +91,31 @@ footer {
 
 #chat {
   font-family: 'Engagement', cursive;
-  font-size: 80px;
+  font-size: 90px;
   color: rgb(21, 102, 234);
-  padding-top: 60px;
+  padding-top: 40px;
 }
 
 #contact-button {
   min-width: 300px;
+}
+
+.form-group, #favorites {
+  font-family: 'Quicksand', sans-serif;
+}
+
+#favorites {
+  padding-top: 40px;
+  padding-bottom: 80px;
+}
+
+.chat-container {
+  padding: 20px 0;
+  background: #8e9eab;
+  background: -webkit-linear-gradient(to right, #eef2f3, #8e9eab);
+  background: linear-gradient(to right, #eef2f3, #8e9eab);
+}
+
+#fave-img {
+  padding-top: 20px;
 }
