--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ body {
 }
 
 .cover-container {
-  background: url(images/background.jpg)no-repeat center center fixed;
+  background: url(images/background2.jpg)no-repeat center center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
